<resources>
    <string name="app_name">Кинотеатр</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="version">Версия приложения: 1.33</string>
    <string name="toBook">ЗАБРОНИРОВАТЬ</string>
    <string name="Blank">Blank</string>

    <string name="Login">Логин</string>
    <string name="Password">Пароль</string>
    <string name="Enter">Войти</string>
    <string name="Register">Зарегестрироваться</string>
    <string name="TicketChoose">Выбор билета</string>
    <string name="AmountOfTickets">Количество билетов:</string>
    <string name="StockTime">12:00</string>
    <string name="Time">Время:</string>
    <string name="Title">Название</string>
    <string name="Total">Итого:</string>
    <string name="StockPrice">300Р</string>
    <string name="PlusSign">+</string>
    <string name="MinusSign">-</string>
    <string name="StockNumber">1</string>
    <string name="AboutApp">О приложении:</string>
    <string name="YourTickets">Ваши билеты:</string>
    <string name="TodayInCinema">Сегодня в кино</string>
    <string name="AdminSettings">Следующие опции предназначены исключительно для разработчика!</string>
    <string name="DBclear">Очистить базу данных</string>
    <string name="ChangeLanguage">Сменить язык</string>
    <string name="AboutAppMain">О приложении</string>
    <string name="Profile">Профиль</string>
    <string name="ToMain">На главную</string>
    <string name="Settings">Настройки</string>
    <string name="Logout">Выйти из аккаунта</string>
    <string name="Exit">Выйти из приложения</string>
    <string name="gitLink"><a href="https://github.com/Dav1dParker">https://github.com/Dav1dParker</a></string>
</resources>